--- a/changes.txt
+++ b/changes.txt
@@ -25,6 +25,13 @@ Further desirable improvements:
 
 
 
+JSVM_9_19_5 -> JSVM_9_19_6
+==========================
+changes:
+- fix for motion upsampling with very large resolution ratios
+- minor fix for deblocking of multiple slices with different deblocking parameters
+
+
 JSVM_9_19_4 -> JSVM_9_19_5
 ==========================
 changes:
